# SHA-256

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SHA256.cpp  SHA256.hpp  main.cpp
.github/workflows/: ci.yml
bench/: bench.cpp
docs/: DESIGN.md  SECURITY.md
fuzz/: fuzz_hmac.cpp  fuzz_sha256.cpp
include/sha2/: hkdf.hpp  hmac.hpp  otp.hpp  pbkdf2.hpp  sha2.hpp  sha256.hpp  util.hpp
tests/: test_framework.hpp  test_hkdf.cpp  test_hmac.cpp  test_kat_corpus.cpp  test_otp.cpp  test_pbkdf2.cpp  test_sha256.cpp
tests/vectors/: generate_kat.py  sha256_kat.hpp
tools/: sha2.cpp
